--- a/main.css
+++ b/main.css
@@ -29,11 +29,12 @@ header{
 }
 
 .grand_title p{
+    position: relative;
     background-color: rgba(248, 245, 245, 0.7);
     width: 600px;
     height: 100px;
-   margin-top: 4%; 
-   margin-left: 30%;
+    margin-top: 4%; 
+    margin-left: 30%;
     font-size: 40px;
 }
 
@@ -117,12 +118,58 @@ header{
         margin-left: 10px;
     }
 
+    .temoignage_bloc1{
+        flex-wrap: wrap;
+    }
     .temoignage_bloc{
-        padding-left: none;
+        flex-wrap: wrap;
     }
 
     .temoin1{
         width: 240px;
+    }
+
+    .image_blue{
+        background-image: url( "image_fond_bleu.png" );
+        width: auto;
+        height: 100vh;   
+    }
+
+    input{
+        border: none;
+        outline: none;
+        border-bottom: 1px solid black;
+        background: none;
+        margin-right: 8px;
+        width: 30px;
+    }
+
+    .our_contacts{
+        background-color: white;
+        width: 25%;
+        height: 350px;
+        border-radius: 20px;
+        margin-top: 30px;
+        margin-left: 10%;
+        padding-top: 5px;
+        padding-left: 30px;
+    }
+
+    button{
+        background-color: #1565D4;
+        width: 130px;
+        height: 50px;
+        border-radius: 20px;
+        border: 1px solid #1565D4;
+        margin-top: 4%;
+    }
+
+    #partenaires{
+        display: flex;
+        justify-content: space-between;
+        margin-left: 0%;
+        margin-right: 20%;
+        margin-top: 10%;
     }
  }
 
@@ -272,7 +319,7 @@ text-decoration: underline;
  }
 
  #contact h2{
-margin-left: 46%;
+     margin-left: 46%;
  }
  .our_contacts{
      background-color: white;
@@ -343,11 +390,12 @@ margin-left: 46%;
 
  }
  .reseau3{
-     padding: 15%
+   padding: 10%;
  }
 
 .reseau3 p{
      color: white;
+     width: 100px;
      justify-content: space-between;
 }
 
@@ -356,14 +404,24 @@ margin-left: 46%;
 }
 
 hr{
+    margin: 0 auto;
     height: 300px;
-    margin-left: 250px;
+    margin-left: 290px;
 }
 .copyrigth{
+    display: flex;
     background-color: #C4C4C4;
     width: 50px;
     height: 50px;
-    margin-top: 200px;
+    position: relative;
+    margin-bottom: 200px;
+    margin-left: 14%;
+}
+
+.copyrigth p{
+    color: white;
+    width: 200px;
+    margin-left: 10px;
 }
 .footer_right p{
     color: white;
