--- a/main.css
+++ b/main.css
@@ -33,7 +33,8 @@ header{
     background-color: rgba(248, 245, 245, 0.7);
     width: 600px;
     height: 100px;
-    margin-top: 4%; 
+    top: 330px;
+    right: 44px; 
     margin-left: 30%;
     font-size: 40px;
 }
